[tool.poetry]
name = "bethowen-parcer"
version = "0.1.0"
description = ""
authors = ["Rulezzz <chulanovate@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.5"
bs4 = "^0.0.2"
requests = "^2.32.3"
lxml = "^5.3.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
